--- a/sit.vcxproj
+++ b/sit.vcxproj
@@ -80,6 +80,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="sit-sha1.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="sit-sha1.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
