--- a/sit.vcxproj
+++ b/sit.vcxproj
@@ -80,10 +80,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="options.h" />
     <ClInclude Include="sit-sha1.h" />
+    <ClInclude Include="sit-util.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="options.cc" />
     <ClCompile Include="sit-sha1.cc" />
+    <ClCompile Include="sit.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
