--- a/sit.vcxproj.filters
+++ b/sit.vcxproj.filters
@@ -18,9 +18,21 @@
     <ClInclude Include="sit-sha1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="sit-util.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="options.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="sit-sha1.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="sit.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="options.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
