--- a/test/sha_test/sit_sha_test.vcxproj
+++ b/test/sha_test/sit_sha_test.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{8046BAAF-911D-460F-9D48-296701CA3A35}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>sit_sha_test</RootNamespace>
+    <ProjectName>sha-test</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -80,11 +81,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="sit-sha1.cc" />
+    <ClCompile Include="..\..\src\sit-sha1.cc" />
     <ClCompile Include="main.cc" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="sit-sha1.h" />
+    <ClInclude Include="..\..\src\sit-sha1.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
