--- a/src/sit.vcxproj
+++ b/src/sit.vcxproj
@@ -14,7 +14,7 @@
     <ProjectGuid>{B390CF59-B51D-4CB8-9933-EE414FFDF356}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>sit</RootNamespace>
-    <ProjectName>sit-main</ProjectName>
+    <ProjectName>sit</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
