Try to allow to add a directory but boost::filesystem::copy doesn't work correctly

--- a/src/sit.vcxproj
+++ b/src/sit.vcxproj
@@ -89,6 +89,7 @@
     <ClCompile Include="sit-add.cc" />
     <ClCompile Include="sit-init.cc" />
     <ClCompile Include="sit-sha1.cc" />
+    <ClCompile Include="sit-util.cc" />
     <ClCompile Include="sit.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
