--- a/src/sit.vcxproj.filters
+++ b/src/sit.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClCompile Include="sit-sha1.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sit-util.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
