--- a/src/sit.vcxproj.filters
+++ b/src/sit.vcxproj.filters
@@ -41,5 +41,8 @@
     <ClCompile Include="sit-util.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="sit-remove.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
