rewrite Sit::FileSystem::Read() complete index structure complete Sit::Core::Init & Add & Rm

--- a/src/sit.vcxproj
+++ b/src/sit.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="Core.hpp" />
     <ClInclude Include="Diff.hpp" />
     <ClInclude Include="FileSystem.hpp" />
+    <ClInclude Include="Index.hpp" />
     <ClInclude Include="Objects.hpp" />
     <ClInclude Include="Util.hpp" />
   </ItemGroup>
