VC Project Setting is up-to-date.

--- a/src/sit.vcxproj.filters
+++ b/src/sit.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClInclude Include="Config.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Refs.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Status.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Core.cc">
@@ -60,6 +66,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Config.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Refs.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Status.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
