--- a/src/sit.vcxproj
+++ b/src/sit.vcxproj
@@ -86,6 +86,8 @@
     <ClInclude Include="FileSystem.hpp" />
     <ClInclude Include="Index.hpp" />
     <ClInclude Include="Objects.hpp" />
+    <ClInclude Include="Refs.hpp" />
+    <ClInclude Include="Status.hpp" />
     <ClInclude Include="Util.hpp" />
   </ItemGroup>
   <ItemGroup>
@@ -95,7 +97,9 @@
     <ClCompile Include="FileSystem.cc" />
     <ClCompile Include="Index.cc" />
     <ClCompile Include="Objects.cc" />
+    <ClCompile Include="Refs.cc" />
     <ClCompile Include="sit.cc" />
+    <ClCompile Include="Status.cc" />
     <ClCompile Include="Util.cc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
