use a new way to show help message Init() will remove the existed repository in current directory and initialize a new one in the same path replace the order of command to fix a bug

--- a/src/sit.vcxproj
+++ b/src/sit.vcxproj
@@ -85,6 +85,7 @@
     <ClInclude Include="Diff.hpp" />
     <ClInclude Include="FileSystem.hpp" />
     <ClInclude Include="Index.hpp" />
+    <ClInclude Include="Messages.hpp" />
     <ClInclude Include="Objects.hpp" />
     <ClInclude Include="Refs.hpp" />
     <ClInclude Include="Status.hpp" />
@@ -96,6 +97,7 @@
     <ClCompile Include="Diff.cc" />
     <ClCompile Include="FileSystem.cc" />
     <ClCompile Include="Index.cc" />
+    <ClCompile Include="Message.cc" />
     <ClCompile Include="Objects.cc" />
     <ClCompile Include="Refs.cc" />
     <ClCompile Include="sit.cc" />
