--- a/src/Makefile
+++ b/src/Makefile
@@ -2,13 +2,13 @@ CXX = g++
 CXXFLAGS = -Wall -O2 -std=c++11
 LIBS = -lpthread -lboost_system -lboost_filesystem -lboost_date_time
 
-SOURCES = sit.cc Config.cc Core.cc Diff.cc FileSystem.cc Index.cc Objects.cc Refs.cc Status.cc Util.cc
+SOURCES = sit.cc Config.cc Core.cc Diff.cc FileSystem.cc Index.cc Objects.cc Refs.cc Status.cc Util.cc Message.cc
 OBJECTS = $(SOURCES:.cc=.o)
 EXECUTABLE = sit
 
 all: $(SOURCES) $(EXECUTABLE)
 
-$(EXECUTABLE): $(OBJECTS) 
+$(EXECUTABLE): $(OBJECTS)
 	$(CXX) $(OBJECTS) $(CXXFLAGS) -o $@ $(LIBS)
 
 .cpp.o:
@@ -18,4 +18,3 @@ $(EXECUTABLE): $(OBJECTS)
 
 clean:
 	rm -f $(OBJECTS) $(EXECUTABLE)
-	
