--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,8 @@
 CXX = g++
-CXXFLAGS = -Wall -O2 -std=c++11
+CXXFLAGS = -Wall -O2 -std=c++11 -DENV64
 LIBS = -lpthread -lboost_system -lboost_filesystem -lboost_date_time
 
-SOURCES = sit.cc Config.cc Core.cc Diff.cc FileSystem.cc Index.cc Objects.cc Refs.cc Status.cc Util.cc Message.cc
+SOURCES = sit.cc Config.cc Core.cc Diff.cc FileSystem.cc Index.cc Objects.cc Refs.cc Status.cc Util.cc Message.cc MurmurHash3.cc
 OBJECTS = $(SOURCES:.cc=.o)
 EXECUTABLE = sit
 
