--- a/src/sit.vcxproj.filters
+++ b/src/sit.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Messages.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MurmurHash3.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Core.cc">
@@ -78,6 +81,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Message.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MurmurHash3.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
