color support for windows. rewrote Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,8 +2,8 @@ CXX = g++
 CXXFLAGS = -Wall -O2 -std=c++11 -DENV64
 LIBS = -lpthread -lboost_system -lboost_filesystem -lboost_date_time
 
-SOURCES = sit.cc Config.cc Core.cc Diff.cc FileSystem.cc Index.cc Objects.cc Refs.cc Status.cc Util.cc Message.cc MurmurHash3.cc
-OBJECTS = $(SOURCES:.cc=.o)
+OBJECTS = Color.o Config.o Core.o Diff.o FileSystem.o Index.o \
+	Message.o MurmurHash3.o Objects.o Refs.o sit.o Status.o Util.o
 EXECUTABLE = sit
 
 all: $(SOURCES) $(EXECUTABLE)
@@ -11,10 +11,24 @@ all: $(SOURCES) $(EXECUTABLE)
 $(EXECUTABLE): $(OBJECTS)
 	$(CXX) $(OBJECTS) $(CXXFLAGS) -o $@ $(LIBS)
 
-.cpp.o:
-	$(CXX) $(CXXFLAGS) -c $< -o $@
-
 .PHONY: clean
 
 clean:
 	rm -f $(OBJECTS) $(EXECUTABLE)
+
+Color.o: Color.cc Color.hpp
+Config.o: Config.cc Config.hpp FileSystem.hpp
+Core.o: Core.cc Core.hpp FileSystem.hpp Util.hpp Index.hpp Config.hpp Refs.hpp Status.hpp
+Diff.o: Diff.cc Diff.hpp Refs.hpp Objects.hpp MurmurHash3.hpp Index.hpp
+FileSystem.o: FileSystem.cc FileSystem.hpp Util.hpp Objects.hpp
+Index.o: Index.cc Index.hpp Refs.hpp Index.hpp Objects.hpp FileSystem.hpp
+Message.o: Message.cc Message.hpp Util.hpp
+MurmurHash3.o: MurmurHash3.cc MurmurHash3.hpp
+Objects.o: Objects.cc Index.hpp Objects.hpp FileSystem.hpp
+Refs.o: Refs.cc Refs.hpp FileSystem.hpp
+sit.o: sit.cc Core.hpp Util.hpp FileSystem.hpp Message.hpp
+Status.o: Status.cc Diff.hpp Index.hpp Status.hpp FileSystem.hpp Refs.hpp
+Util.o: Util.cc Util.hpp FileSystem.hpp Color.hpp
+
+.o:
+	$(CXX) $(CXXFLAGS) -c $< -o $@
