use std::set to rewrite the Garbage Colloct 重新处理了头文件的包含关系，避免出现环形包含关系，对各文件的依赖关系进行了处理，并依照该关系修改了Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -17,17 +17,17 @@ clean:
 	rm -f $(OBJECTS) $(EXECUTABLE)
 
 Color.o: Color.cc Color.hpp
-Config.o: Config.cc Config.hpp FileSystem.hpp
+Config.o: Config.cc Config.hpp FileSystem.hpp Util.hpp
 Core.o: Core.cc Core.hpp FileSystem.hpp Util.hpp Index.hpp Config.hpp Refs.hpp Status.hpp
-Diff.o: Diff.cc Diff.hpp Refs.hpp Objects.hpp MurmurHash3.hpp Index.hpp
-FileSystem.o: FileSystem.cc FileSystem.hpp Util.hpp Objects.hpp
-Index.o: Index.cc Index.hpp Refs.hpp Index.hpp Objects.hpp FileSystem.hpp
+Diff.o: Diff.cc Diff.hpp Refs.hpp Objects.hpp MurmurHash3.hpp Index.hpp Util.hpp
+FileSystem.o: FileSystem.cc FileSystem.hpp Util.hpp
+Index.o: Index.cc Index.hpp Refs.hpp Objects.hpp FileSystem.hpp Util.hpp
 Message.o: Message.cc Message.hpp Util.hpp
 MurmurHash3.o: MurmurHash3.cc MurmurHash3.hpp
-Objects.o: Objects.cc Index.hpp Objects.hpp FileSystem.hpp
-Refs.o: Refs.cc Refs.hpp FileSystem.hpp
+Objects.o: Objects.cc Index.hpp Objects.hpp FileSystem.hpp Util.hpp
+Refs.o: Refs.cc Refs.hpp FileSystem.hpp Util.hpp
 sit.o: sit.cc Core.hpp Util.hpp FileSystem.hpp Message.hpp
-Status.o: Status.cc Diff.hpp Index.hpp Status.hpp FileSystem.hpp Refs.hpp
+Status.o: Status.cc Diff.hpp Index.hpp Status.hpp FileSystem.hpp Refs.hpp Util.hpp
 Util.o: Util.cc Util.hpp FileSystem.hpp Color.hpp
 
 .o:
