`sit checkout` will clean the workspace when checkout a commit. fix some compile error in FileSystem.cc reconfigure VC project to make sure that sit can be linked correctly

--- a/src/sit.vcxproj.filters
+++ b/src/sit.vcxproj.filters
@@ -87,4 +87,7 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="D:\SDK\zlib-1.2.8\zdll.lib" />
+  </ItemGroup>
 </Project>
