modified the configuration to use the static library of zlib fix a bug in sit which if there is not a sit repository the help command cannot run correctly.

--- a/src/sit.vcxproj.filters
+++ b/src/sit.vcxproj.filters
@@ -88,6 +88,6 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="D:\SDK\zlib-1.2.8\zdll.lib" />
+    <Library Include="D:\SDK\zlib-1.2.8\contrib\vstudio\vc11\x86\ZlibStatRelease\zlibstat.lib" />
   </ItemGroup>
 </Project>
