add target pdf in report/Makefile to produce the correct PDF file.

--- a/report/Makefile
+++ b/report/Makefile
@@ -1,5 +1,14 @@
+pdf: about-stress-test.tex A-Simplified-Git.tex introduction-to-command.tex introduction-to-module.tex SJTU_BLUE.png figure_1.png figure_2.png
+	xelatex A-Simplified-Git.tex
+	xelatex A-Simplified-Git.tex
+	xelatex A-Simplified-Git.tex
+	xelatex A-Simplified-Git.tex
+
+
+
 clean:
 	-rm -rf *.aux
 	-rm -rf *.gz
 	-rm -rf *.toc
 	-rm -rf *.log
+	-rm -rf *.out
