--- a/src/sit.vcxproj.filters
+++ b/src/sit.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClInclude Include="MurmurHash3.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Commit.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Core.cc">
@@ -84,6 +87,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Color.cc">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Commit.cc">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
